--- a/index.html
+++ b/index.html
@@ -1,2 +1,32 @@
- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
+<!doctype html>
+<html lang="en">
+
+<head>
+	<title>TOMADOUGH</title>
+	<meta charset="utf-8">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="tomado.js"></script>
+</head>
+
+<body>
+
+<script>
+	$(function() {
+		console.log("bla!");
+	});
+</script>
+
+	<ul id="playlist">
+		<li> Artist – Title</li>
+	</ul>
+
+	<iframe></iframe>
+
+	<p class="bio">
+		<h3>Artist - Title</h3>
+		<div></div>
+
+	</p>
+
+</body>
