--- a/index.html
+++ b/index.html
@@ -7,26 +7,20 @@
 	<meta charset="utf-8">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="tomado.js"></script>
+	<link rel='stylesheet' href='style.css' type='text/css' />
 </head>
 
 <body>
 
-<script>
-	$(function() {
-		console.log("bla!");
-	});
-</script>
+
 
 	<ul id="playlist">
-		<li> Artist – Title</li>
+		
 	</ul>
 
 	<iframe></iframe>
 
 	<p class="bio">
-		<h3>Artist - Title</h3>
-		<div></div>
-
 	</p>
 
 </body>
